<resources>
    <string name="app_name">My Fitness Lab</string>
    <string name="IMC">IMC</string>
    <string name="cadastro_imc">Calcule o IMC para o aluno desejado</string>
    <string name="weight">Peso(kg)</string>
    <string name="height">Altura(cm)</string>
    <string name="btn_calc">Calcular</string>
    <string name="tittle_imc">IMC</string>
    <string name="fields_messages">Preencha os todos os campos corretamente.</string>

    <string name="imc_severely_low_weight">Severamente abaixo do peso.</string>
    <string name="imc_very_low_weight">Muito abaixo do peso.</string>
    <string name="imc_low_weight">Abaixo do peso.</string>
    <string name="normal">Peso normal.</string>
    <string name="imc_high_weight">Acima do peso.</string>
    <string name="imc_so_high_weight">Moderadamente obeso.</string>
    <string name="imc_severely_high_weight">Severamente obeso.</string>
    <string name="imc_extreme_weight">Extremamente obeso.</string>
    <string name="imc_response">Seu IMC é %.2f</string>
    <string name="save">Salvar</string>
    <string name="edit_aluno">Nome Aluno</string>
    <string name="tittle_aluno">Cadastro Novo Aluno</string>
    <string name="btn_cad_aluno">Cadastrar Aluno</string>
    <string name="campo_vazio">O Campo não pode ser vazio!</string>
    <string name="msg_cadastro">Cadastro realizado!</string>
    <string name="search">Buscar</string>
    <string name="cadastro_tmb">Calcule o TMB para o aluno desejado</string>
    <string name="tmb_response">Seu TMB é %.2f</string>
    <string name="register_not_found">Não há registros cadastrados</string>
    <string name="aluno_not_found">Não há alunos cadastrados</string>
    <string name="TMB">TMB</string>
    <string name="type_aluno">aluno</string>
    <string name="atualizar">Atualizar</string>
    <string name="msgDeleted">Item deletado com Sucesso!</string>
    <string name="msg_opcoes">Escolha a opção desejada:</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>


</resources>