<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/imc_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="20dp"
        tools:context=".ImcActivity"
        android:fitsSystemWindows="true"
        android:padding="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tittle_imc"
            android:textSize="50dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/cadastro_imc" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AutoTextViewForm"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Selecione um aluno">

            <AutoCompleteTextView
                android:id="@+id/ls_alunos_imc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/edit_imc_weight"
            style="@style/EditTextForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight" />

        <EditText
            android:id="@+id/edit_imc_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EditTextForm"
            android:hint="@string/height" />

        <Button
            android:id="@+id/btn_imc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:text="Calcular"
            style="@style/btnForm" />

    </LinearLayout>


</ScrollView>